# TrafficMonitor

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: main.rs  packet_reciever.rs  statistics.rs  webservice.rs
src/statistics/: throttled_printer.rs
static/: index.html
webapp/: package-lock.json  package.json  webpack.config.js
webapp/src/: main.js  meter.js
